[gd_scene load_steps=9 format=3 uid="uid://n7npvtorsbpr"]

[ext_resource type="Theme" uid="uid://cnw25cdhcyxjc" path="res://sources/Default.tres" id="1_a3nxk"]
[ext_resource type="Script" path="res://AutoLoad/TOP.gd" id="1_w4olc"]
[ext_resource type="Shader" path="res://AutoLoad/TOPRectMaskTransition.gdshader" id="3_logbu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_203si"]
shader = ExtResource("3_logbu")
shader_parameter/cutoff = 1.0
shader_parameter/tran = 0.2
shader_parameter/col = Vector4(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_sp7wa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectMask:material:shader_parameter/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_3xi62"]
resource_name = "TOPMaskTran"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectMask:material:shader_parameter/cutoff")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_j2crd"]
resource_name = "TOPMaskTranOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectMask:material:shader_parameter/cutoff")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_088m7"]
_data = {
"RESET": SubResource("Animation_sp7wa"),
"TOPMaskTranIn": SubResource("Animation_3xi62"),
"TOPMaskTranOut": SubResource("Animation_j2crd")
}

[node name="TOP" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a3nxk")
script = ExtResource("1_w4olc")

[node name="RectMask" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_203si")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Left" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TipContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
offset_right = 1820.0
offset_bottom = 1010.0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Tip" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Left/TipContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="LeftMessageContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Left/TipContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="DEBUG" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Left/TipContainer/LeftMessageContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StaticMemoryUsage" type="Label" parent="MarginContainer/HBoxContainer/Left/TipContainer/LeftMessageContainer/DEBUG"]
layout_mode = 2
mouse_filter = 0
text = "静态内存：0MB"

[node name="RenderMemoryUsage" type="Label" parent="MarginContainer/HBoxContainer/Left/TipContainer/LeftMessageContainer/DEBUG"]
layout_mode = 2
text = "显存使用：0MB"

[node name="FPS" type="Label" parent="MarginContainer/HBoxContainer/Left/TipContainer/LeftMessageContainer/DEBUG"]
layout_mode = 2
text = "帧率：0"

[node name="RenderObject" type="Label" parent="MarginContainer/HBoxContainer/Left/TipContainer/LeftMessageContainer/DEBUG"]
layout_mode = 2
text = "渲染对象数：0"

[node name="Middle" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MessageContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Right"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_088m7")
}
